src/test/ui/did_you_mean/multiple-pattern-typo.stderr
error: unexpected token `||` after pattern
  --> $DIR/multiple-pattern-typo.rs:14:15
   |
14 |         1 | 2 || 3 => (), //~ ERROR unexpected token `||` after pattern
   |               ^^
   |
   = help: did you mean to use `|` to specify multiple patterns?

error: aborting due to previous error

